<resources>
    <string name="app_name">ZooAdaApp</string>
    <string name="title_activity_pens_list">PensList</string>
    <string name="create_pen_button">CREATE!</string>
    <string name="dry_area_textfield">Dry Area in m2</string>
    <string name="wet_area_textfield">Wet Area in m2</string>
    <string name="volume_in_m3">volume_area_textfield</string>
    <string name="dry_area_label">dry_area_label</string>
    <string name="wet_area_label">wet_area_label</string>
    <string name="volume_label">volume_label</string>
    <string name="title_activity_animals_list">AnimalsList</string>
    <string name="is_hostile_label">Is hostile?</string>
    <string name="can_be_petted_label">Can be petted?</string>
    <string name="pen_assigned_label">Pen assigned</string>
    <string name="volume_peranimal_label">Volume</string>
    <string name="area_peranimal_label">Area</string>
    <string name="pen_type_label">Pen type</string>
    <string name="animal_type_label">Animal type</string>
    <string name="m2_label">m2</string>
    <string name="m3_label">m3</string>
    <string name="create_animal_button">CREATE</string>
    <string name="this_animal_can_be_petted">This animal can be petted?:</string>
    <string name="needs_a_volume_of">Needs a volume of:</string>
    <string name="is_assigned_to">Is assigned to:</string>
    <string name="needs_and_area_of">Needs and area of:</string>
    <string name="lives_in">Lives in:</string>
    <string name="animal_name">Animal name:</string>
    <string name="m2">m2</string>
    <string name="air_space">Air space</string>
    <string name="animal_requirements">Animal requirements:</string>
    <string name="land">Land</string>
    <string name="water">Water</string>
    <string name="space_to_fly">TextView</string>
    <string name="needs_space_to_fly">Needs space to fly:</string>
    <string name="needs_water">Needs water:</string>
    <string name="needs_land">Needs land:</string>
    <string name="back_to_list">Back to List</string>
    <string name="text">TEXT</string>
    <string name="zookeepers">ZOOKEEPERS</string>
    <string name="my_zoo_currently_has">My zoo currently has:</string>
    <string name="animals_living_here">animals living here!</string>
    <string name="animals">ANIMALS</string>
    <string name="pens">PENS</string>
    <string name="welcome_to_my_zoo">WELCOME TO MY ZOO!</string>
</resources>
