<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mavesonzini.zooadaapp.AnimalForm">

    <Spinner
        android:id="@+id/hostile_spinner"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/can_pet_spinner" />

    <Spinner
        android:id="@+id/can_pet_spinner"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/hostile_spinner"
        app:layout_constraintTop_toBottomOf="@+id/pen_assigned_spinner" />

    <Spinner
        android:id="@+id/pen_assigned_spinner"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/air_peranimal_text_view" />

    <Spinner
        android:id="@+id/animal_type_spinner"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/air_peranimal_text_view"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="5dp"
        android:text="0.0"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="@+id/pen_assigned_spinner"
        app:layout_constraintTop_toBottomOf="@+id/water_peranimal_text_view2" />

    <AutoCompleteTextView
        android:id="@+id/water_peranimal_text_view2"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="@+id/air_peranimal_text_view"
        app:layout_constraintTop_toBottomOf="@+id/land_peranimal_text_view"
        tools:text="0.0" />

    <AutoCompleteTextView
        android:id="@+id/land_peranimal_text_view"
        android:layout_width="107dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="@+id/water_peranimal_text_view2"
        app:layout_constraintTop_toBottomOf="@+id/name_edit_text"
        tools:text="0.0" />

    <Button
        android:id="@+id/create_animal_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/create_animal_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/label7"
        android:layout_width="68dp"
        android:layout_height="22dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        android:text="@string/is_hostile_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label6" />

    <TextView
        android:id="@+id/label6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/can_be_petted_label"
        app:layout_constraintEnd_toEndOf="@+id/label7"
        app:layout_constraintTop_toBottomOf="@+id/label5" />

    <TextView
        android:id="@+id/label5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/pen_assigned_label"
        app:layout_constraintEnd_toEndOf="@+id/label6"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <TextView
        android:id="@+id/label4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/water"
        app:layout_constraintEnd_toEndOf="@+id/textView23"
        app:layout_constraintTop_toBottomOf="@+id/label3" />

    <TextView
        android:id="@+id/label3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/land"
        app:layout_constraintEnd_toEndOf="@+id/label4"
        app:layout_constraintTop_toBottomOf="@+id/name_label" />

    <TextView
        android:id="@+id/label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="40dp"
        android:text="@string/animal_type_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/m3_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="37dp"
        android:text="@string/m3_label"
        app:layout_constraintEnd_toEndOf="@+id/m3_label3"
        app:layout_constraintStart_toEndOf="@+id/air_peranimal_text_view"
        app:layout_constraintTop_toBottomOf="@+id/m3_label3" />

    <TextView
        android:id="@+id/m3_label3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="30dp"
        android:text="@string/m3_label"
        app:layout_constraintEnd_toEndOf="@+id/m3_label2"
        app:layout_constraintStart_toEndOf="@+id/water_peranimal_text_view2"
        app:layout_constraintTop_toBottomOf="@+id/m3_label2" />

    <TextView
        android:id="@+id/m3_label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="15dp"
        android:text="@string/m2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/land_peranimal_text_view"
        app:layout_constraintTop_toBottomOf="@+id/name_edit_text" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/air_space"
        app:layout_constraintEnd_toEndOf="@+id/label5"
        app:layout_constraintTop_toBottomOf="@+id/label4" />

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:text="Name: "
        app:layout_constraintEnd_toEndOf="@+id/label1"
        app:layout_constraintTop_toBottomOf="@+id/label1" />

    <AutoCompleteTextView
        android:id="@+id/name_edit_text"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:completionHint="Animal name / type"
        app:layout_constraintStart_toStartOf="@+id/animal_type_spinner"
        app:layout_constraintTop_toBottomOf="@+id/animal_type_spinner" />
</android.support.constraint.ConstraintLayout>
